--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -53,7 +53,7 @@ nfpms:
     description: Open Source alternative to Ansible Tower
     homepage: https://github.com/semaphoreui/semaphore
     vendor: Semaphore UI
-    maintainer: Semaphore UI <support@semui.co>
+    maintainer: Semaphore UI <support@semaphoreui.com>
     license: MIT
 
     formats:
