Set example values so boltdb tests pass

--- a/api-docs.yml
+++ b/api-docs.yml
@@ -445,6 +445,7 @@ definitions:
     properties:
       id:
         type: integer
+        example: 1
       name:
         type: string
         example: Test
@@ -734,6 +735,7 @@ definitions:
     properties:
       id:
         type: integer
+        example: 1
       project_id:
         type: integer
         minimum: 1
