--- a/web/package.json
+++ b/web/package.json
@@ -35,7 +35,9 @@
     "chai": "^4.3.6",
     "dotenv": "^16.4.5",
     "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-vue": "^9.1.1",
     "eslint-plugin-vuejs-accessibility": "^1.2.0",
     "glob-parent": ">=5.1.2",
@@ -46,6 +48,7 @@
     "nyc": "^15.1.0",
     "openai": "^4.65.0",
     "plugin-error": "^2.0.1",
+    "prettier": "^3.4.2",
     "sass": "~1.81.0",
     "sass-loader": "^13.0.0",
     "stylus": "^0.64.0",
