--- a/web/package.json
+++ b/web/package.json
@@ -14,16 +14,19 @@
     "axios": "^0.29.0",
     "core-js": "^3.39.0",
     "cron-parser": "^4.9.0",
-    "dredd": "^13.1.2",
     "moment": "^2.29.4",
     "vue": "^2.6.14",
     "vue-codemirror": "^4.0.6",
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.5.4",
     "vuedraggable": "^2.24.3",
-    "vuetify": "^2.6.10"
+    "vuetify": "^2.6.10",
+    "chart.js": "^3.8.0",
+    "chartjs-adapter-moment": "^1.0.1",
+    "vue-chartjs": "^4.0.0"
   },
   "devDependencies": {
+    "dredd": "^13.1.2",
     "@vue/cli-plugin-babel": "^5.0.6",
     "@vue/cli-plugin-eslint": "^5.0.6",
     "@vue/cli-plugin-router": "^5.0.6",
